// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamActions Bulk Total results < bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <span>
      3 issues on this page selected.
      <a
        onClick={[Function]}
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Select all 
          </span>
          <span
            key="2"
          >
            600
          </span>
          <span
            key="3"
          >
             issues that match this search query.
          </span>
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`StreamActions Bulk Total results < bulk limit bulk resolves 1`] = `
<ModalDialog
  bsClass="modal"
  className="in"
  onClick={[Function]}
  role="document"
  style={Object {}}
  tabIndex="-1"
>
  <div
    className="in modal"
    onClick={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
        role="document"
      >
        <div
          className="modal-body"
        >
          <div>
            <p
              style={
                Object {
                  "marginBottom": "20px",
                }
              }
            >
              <strong>
                <span
                  key="8"
                >
                  <span
                    key="0"
                  >
                    Are you sure you want to 
                  </span>
                  <span
                    key="2"
                  >
                    resolve
                  </span>
                  <span
                    key="3"
                  >
                     all 
                  </span>
                  <span
                    key="5"
                  >
                    600
                  </span>
                  <span
                    key="6"
                  >
                     issues that match the search?
                  </span>
                </span>
              </strong>
            </p>
            <ExtraDescription
              all={true}
              query=""
              queryCount={600}
            >
              <p
                className="error"
              >
                <strong>
                  <span
                    key="5"
                  >
                    <span
                      key="0"
                    >
                      This will apply to all 
                    </span>
                    <span
                      key="2"
                    >
                      600
                    </span>
                    <span
                      key="3"
                    >
                       issues matched in this project!
                    </span>
                  </span>
                </strong>
              </p>
            </ExtraDescription>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <Button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <StyledSmartButton
              className=""
              disabled={false}
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <Component
                className="css-1rg98na-StyledSmartButton css-a44t1u0"
                disabled={false}
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <button
                  className="css-1rg98na-StyledSmartButton css-a44t1u0"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                      >
                        <Base
                          align="center"
                          className="css-a44t1u1 css-12e52in"
                        >
                          <div
                            className="css-a44t1u1 css-12e52in"
                            is={null}
                          >
                            Cancel
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledSmartButton>
          </Button>
          <Button
            autoFocus={true}
            disabled={false}
            onClick={[Function]}
            priority="primary"
          >
            <StyledSmartButton
              autoFocus={true}
              className=""
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
            >
              <Component
                autoFocus={true}
                className="css-ds78q9-StyledSmartButton css-a44t1u0"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
              >
                <button
                  autoFocus={true}
                  className="css-ds78q9-StyledSmartButton css-a44t1u0"
                  disabled={false}
                  onClick={[Function]}
                  priority="primary"
                  role="button"
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                      >
                        <Base
                          align="center"
                          className="css-a44t1u1 css-12e52in"
                        >
                          <div
                            className="css-a44t1u1 css-12e52in"
                            is={null}
                          >
                            Bulk resolve issues
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledSmartButton>
          </Button>
        </div>
      </div>
    </div>
  </div>
</ModalDialog>
`;

exports[`StreamActions Bulk Total results < bulk limit can bulk select 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <strong>
      <span
        key="5"
      >
        <span
          key="0"
        >
          Selected all 
        </span>
        <span
          key="2"
        >
          600
        </span>
        <span
          key="3"
        >
           issues that match this search query.
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`StreamActions Bulk Total results > bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <span>
      3 issues on this page selected.
      <a
        onClick={[Function]}
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Select the first 
          </span>
          <span
            key="2"
          >
            1,000
          </span>
          <span
            key="3"
          >
             issues that match this search query.
          </span>
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`StreamActions Bulk Total results > bulk limit bulk resolves 1`] = `
<ModalDialog
  bsClass="modal"
  className="in"
  onClick={[Function]}
  role="document"
  style={Object {}}
  tabIndex="-1"
>
  <div
    className="in modal"
    onClick={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
        role="document"
      >
        <div
          className="modal-body"
        >
          <div>
            <p
              style={
                Object {
                  "marginBottom": "20px",
                }
              }
            >
              <strong>
                <span
                  key="8"
                >
                  <span
                    key="0"
                  >
                    Are you sure you want to 
                  </span>
                  <span
                    key="2"
                  >
                    resolve
                  </span>
                  <span
                    key="3"
                  >
                     the first 
                  </span>
                  <span
                    key="5"
                  >
                    1,000
                  </span>
                  <span
                    key="6"
                  >
                     issues that match the search?
                  </span>
                </span>
              </strong>
            </p>
            <ExtraDescription
              all={true}
              query=""
              queryCount={1500}
            >
              <p
                className="error"
              >
                <strong>
                  <span
                    key="5"
                  >
                    <span
                      key="0"
                    >
                      This will apply to the first 
                    </span>
                    <span
                      key="2"
                    >
                      1,000
                    </span>
                    <span
                      key="3"
                    >
                       issues matched in this project!
                    </span>
                  </span>
                </strong>
              </p>
            </ExtraDescription>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <Button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <StyledSmartButton
              className=""
              disabled={false}
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <Component
                className="css-1rg98na-StyledSmartButton css-a44t1u0"
                disabled={false}
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <button
                  className="css-1rg98na-StyledSmartButton css-a44t1u0"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                      >
                        <Base
                          align="center"
                          className="css-a44t1u1 css-12e52in"
                        >
                          <div
                            className="css-a44t1u1 css-12e52in"
                            is={null}
                          >
                            Cancel
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledSmartButton>
          </Button>
          <Button
            autoFocus={true}
            disabled={false}
            onClick={[Function]}
            priority="primary"
          >
            <StyledSmartButton
              autoFocus={true}
              className=""
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
            >
              <Component
                autoFocus={true}
                className="css-ds78q9-StyledSmartButton css-a44t1u0"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
              >
                <button
                  autoFocus={true}
                  className="css-ds78q9-StyledSmartButton css-a44t1u0"
                  disabled={false}
                  onClick={[Function]}
                  priority="primary"
                  role="button"
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel css-a44t1u1"
                      >
                        <Base
                          align="center"
                          className="css-a44t1u1 css-12e52in"
                        >
                          <div
                            className="css-a44t1u1 css-12e52in"
                            is={null}
                          >
                            Bulk resolve issues
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledSmartButton>
          </Button>
        </div>
      </div>
    </div>
  </div>
</ModalDialog>
`;

exports[`StreamActions Bulk Total results > bulk limit can bulk select 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <strong>
      <span
        key="5"
      >
        <span
          key="0"
        >
          Selected up to the first 
        </span>
        <span
          key="2"
        >
          1,000
        </span>
        <span
          key="3"
        >
           issues that match this search query.
        </span>
      </span>
    </strong>
  </div>
</div>
`;
